fixed issue of wrong img rater h2 alignment on smaller screens

--- a/style.css
+++ b/style.css
@@ -356,6 +356,11 @@
     .projects-sm-toggle {
         display: block !important;
     }
+    
+    .h2-projects {
+        text-align: center;
+    
+    }
 
 }
 
